--- a/safety-suite/src/App.css
+++ b/safety-suite/src/App.css
@@ -1,3 +1,80 @@
+li {
+  list-style: none;
+}
+a {
+  text-decoration: none;
+}
+h1 {
+  font-size: 3em;
+}
 .site {
   text-align: center;
+  font-family: Helvetica;
+  display: block;
+  justify-content: center;
+  align-items: center;
+}
+.site-header {
+  background-color: #fff;
+  color: #173e43;
+  min-height: 100vh;
+  position: relative;
+  left: 0;
+  top: 0;
+  width: 100%;
+  /* height: 150px; */
+  display: flex;
+  justify-content: center;
+  /* align-items: center; */
+  flex-direction: column;
+
+}
+
+/* .site-menu {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+} */
+.site-menu-list {
+  padding: 0;
+}
+.site-menu-item {
+  margin: 10px;
+}
+.site-menu-link {
+  color: #173e43;
+  font-size: 20px;
+}
+.site-menu-link:hover {
+  color: #3fb0ac;
+}
+.site-main {
+  background-color: #3CB371;
+  color: #fff;
+  width: 100%;
+  min-height: 100vh;
+  font-size: 20px;
+  margin-left: 0px;
+}
+.site-footer {
+  background-color: #fff;
+  color: #173e43;
+  height: 150px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  display: none;
+}
+@media only screen and (min-width: 700px) {
+  .site-header {
+    position: fixed;
+    width: 400px;
+  }
+  .site {
+    display: flex;
+  }
+  .site-main {
+    margin-left: 400px;
+  }
 }
