--- a/safety-suite/src/App.css
+++ b/safety-suite/src/App.css
@@ -46,18 +46,26 @@ h1 {
   min-height: 100vh;
   font-size: 20px;
   margin-left: 0px;
-}
-.site-footer {
-  background-color: #fff;
-  color: #173e43;
-  height: 150px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   flex-direction: column;
-  display: none;
+  justify-content: center;
+  display: grid;
+  grid-template-columns: auto auto auto;
+  grid-gap: 20px;
 }
-@media only screen and (min-width: 700px) {
+.grid-item {
+  grid-column-start: 2;
+  grid-column-end: 3;
+}
+.grid-item-link {
+  color: #fff;
+}
+.grid-item-link:visited {
+  color: #fff;
+}
+.grid-item-link:hover {
+  color: #173e43;
+}
+@media only screen and (min-width: 750px) {
   .site-header {
     position: fixed;
     width: 400px;
