--- a/safety-suite/src/App.css
+++ b/safety-suite/src/App.css
@@ -44,13 +44,14 @@ h1 {
   color: #fff;
   width: 100%;
   min-height: 100vh;
-  font-size: 20px;
+  font-size: 15px;
   margin-left: 0px;
   flex-direction: column;
   justify-content: center;
   display: grid;
   grid-template-columns: auto auto auto;
   grid-gap: 20px;
+  padding: 10px;
 }
 .grid-item {
   grid-column-start: 2;
@@ -60,10 +61,10 @@ h1 {
   color: #fff;
 }
 .grid-item-link:visited {
-  color: #fff;
+  color: #173e43;
 }
 .grid-item-link:hover {
-  color: #173e43;
+  color: #fff;
 }
 @media only screen and (min-width: 750px) {
   .site-header {
@@ -75,5 +76,6 @@ h1 {
   }
   .site-main {
     margin-left: 400px;
+    font-size: 20px;
   }
 }
